--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 
 body {
     font-family: "Lato", sans-serif;
-    background-color: #312c29;
+    //background-color: #312c29;
+    background-color: gray;
 }
 /*------------------------------------------------- Navbar --------------------------------------------------*/
 
@@ -24,7 +25,11 @@ body {
 }
 
 /*------------------------------------------------- Jumboron --------------------------------------------------*/
-.hero {
+
+.jumbotron {
+    background-image: url(https://images-2.gog-statics.com/5ce97da0951021729708b978b7a9c4559295aa6adbae8d3febd0dbf0cc4af880_takeover_bg_1366.webp);
+    background-size: cover;
+    height: 100%;
 }
 
 /*------------------------------------------------- Flash --------------------------------------------------*/
@@ -37,13 +42,17 @@ strong {
 }
 /*-------------------------------------------------carousel indicators  --------------------------------------------------*/
 .carousel-indicators {
+    position: relative;
     margin-bottom: -2em;
 }
 
 .carousel-indicators .active {
     background-color: rgb(163, 43, 163);
 }
-/*-------------------------------------------------navbar--------------------------------------------------*/
+/*------------------------------------------------- flash card --------------------------------------------------*/
+.card-border{
+    border:green"
+}
 
 /*-------------------------------------------------navbar--------------------------------------------------*/
 
