last homework push

--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
 
 body {
+   
     font-family: "Lato", sans-serif;
-    //background-color: #312c29;
-    background-color: gray;
+    background-color: #312c29;
+    //background-color: gray;
 }
 /*------------------------------------------------- Navbar --------------------------------------------------*/
 
@@ -54,12 +55,22 @@ strong {
     border:green"
 }
 
-/*-------------------------------------------------navbar--------------------------------------------------*/
-
-/*-------------------------------------------------navbar--------------------------------------------------*/
-
-/*-------------------------------------------------navbar--------------------------------------------------*/
-
-/*-------------------------------------------------navbar--------------------------------------------------*/
-
+/*-------------------------------------------------badge--------------------------------------------------*/
+.badge{
+    position: absolute;
+    margin-top: 0;
+    margin-left: 0;
+}
+/*------------------------------------------------- lorem --------------------------------------------------*/
+#lorem{
+    color: bisque;
+}
+/*------------------------------------------------- Table --------------------------------------------------*/
+.table{
+    color: bisque;
+}
+/*-------------------------------------------------FOOTER-------------------------------------------------*/
+footer{
+    text-align: center;
+}
 /*-------------------------------------------------navbar--------------------------------------------------*/
