--- a/style.css
+++ b/style.css
@@ -71,6 +71,8 @@ strong {
 }
 /*-------------------------------------------------FOOTER-------------------------------------------------*/
 footer{
-    text-align: center;
+    margin-left: 20px;
+    align-items: center;
+    color: bisque;
 }
 /*-------------------------------------------------navbar--------------------------------------------------*/
