--- a/style.css
+++ b/style.css
@@ -3,10 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
 
 body {
-   
     font-family: "Lato", sans-serif;
     background-color: #312c29;
-    //background-color: gray;
 }
 /*------------------------------------------------- Navbar --------------------------------------------------*/
 
@@ -32,6 +30,21 @@ body {
     background-size: cover;
     height: 100%;
 }
+.jumbotron p,
+h1 {
+    color: #312c29;
+    font-weight: 900;
+}
+
+a p {
+    color: #383a38;
+    text-decoration: none;
+    background-color: transparent;
+}
+h1.display-4 {
+    font-weight: 700;
+    text-decoration: none;
+}
 
 /*------------------------------------------------- Flash --------------------------------------------------*/
 .flash span i,
@@ -51,26 +64,29 @@ strong {
     background-color: rgb(163, 43, 163);
 }
 /*------------------------------------------------- flash card --------------------------------------------------*/
-.card-border{
-    border:green"
+.card-border {
+    border: green;
 }
 
 /*-------------------------------------------------badge--------------------------------------------------*/
-.badge{
+.badge {
     position: absolute;
     margin-top: 0;
     margin-left: 0;
 }
 /*------------------------------------------------- lorem --------------------------------------------------*/
-#lorem{
+#lorem {
     color: bisque;
 }
+#lorem a {
+    color: rgb(204, 7, 181);
+}
 /*------------------------------------------------- Table --------------------------------------------------*/
-.table{
+.table {
     color: bisque;
 }
 /*-------------------------------------------------FOOTER-------------------------------------------------*/
-footer{
+footer {
     margin-left: 20px;
     align-items: center;
     color: bisque;
